force-app/main/default/objects/AdviceChecklist__c/AdviceChecklist__c.object-meta.xml
<CustomObject>
    <label>Advice Checklist</label>
    <nameField>
        <displayFormat>AC{0000}</displayFormat>
        <label>Advice Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advice Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>