force-app/main/default/objects/AdviceChecklist__c/fields/AddAllNonStandardAppendixWarnings__c.field-meta.xml
<CustomField>
    <fullName>AddAllNonStandardAppendixWarnings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirm completion of non standard warnings added to deck</description>
    <inlineHelpText>Add details for all non standard appendix warnings (i.e. portfolio performance calculated excluding cash)</inlineHelpText>
    <label>Add all non standard appendix warnings</label>
    <type>Checkbox</type>
</CustomField>