force-app/main/default/objects/AdviceChecklist__c/fields/AddDropboxLinkPassword__c.field-meta.xml
<CustomField>
    <fullName>AddDropboxLinkPassword__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Refer to &#39;Send Dropbox Email&#39; task description.</inlineHelpText>
    <label>Add Dropbox Link &amp; Password…</label>
    <type>Checkbox</type>
</CustomField>