force-app/main/default/objects/AdviceChecklist__c/fields/AddedAnyNewFactsToClientProfile__c.field-meta.xml
<CustomField>
    <fullName>AddedAnyNewFactsToClientProfile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Added any new facts to client profile for next advice/review?</inlineHelpText>
    <label>Added Any New Facts To Client Profile?</label>
    <type>Checkbox</type>
</CustomField>