force-app/main/default/objects/AdviceChecklist__c/fields/AddEditedMeetingRecording__c.field-meta.xml
<CustomField>
    <fullName>AddEditedMeetingRecording__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Refer to &#39;Send Dropbox Email&#39; task description.</inlineHelpText>
    <label>Add Edited Meeting Recording</label>
    <type>Checkbox</type>
</CustomField>