force-app/main/default/objects/AdviceChecklist__c/fields/AddMeetingSlides__c.field-meta.xml
<CustomField>
    <fullName>AddMeetingSlides__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use unclear</description>
    <inlineHelpText>Refer to &apos;Send Dropbox Email&apos; task description.</inlineHelpText>
    <label>Add meeting slides</label>
    <type>Checkbox</type>
</CustomField>