force-app/main/default/objects/AdviceChecklist__c/fields/AddToMeetingSuitabilitySlides__c.field-meta.xml
<CustomField>
    <fullName>AddToMeetingSuitabilitySlides__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use unclear</description>
    <label>Add to meeting suitability slides</label>
    <type>Checkbox</type>
</CustomField>