force-app/main/default/objects/AdviceChecklist__c/fields/AddToSuitabilitySlideMeetingAgenda__c.field-meta.xml
<CustomField>
    <fullName>AddToSuitabilitySlideMeetingAgenda__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether there are points from this deck which should be covered by the deck improvement meeting</description>
    <inlineHelpText>Add to the suitability slide meeting agenda for next week</inlineHelpText>
    <label>Add to suitability slide meeting agenda</label>
    <type>Checkbox</type>
</CustomField>