force-app/main/default/objects/AdviceChecklist__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <inlineHelpText>Does the advice make sense and seem to you as both suitable, but also the right thing for the client? If not please flag to planner/head planner.</inlineHelpText>
    <label>Advice</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>