force-app/main/default/objects/AdviceChecklist__c/fields/AdviceMeetingCompleteComplete__c.field-meta.xml
<CustomField>
    <fullName>AdviceMeetingCompleteComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Also applies when not all advice was accepted but fulfilment is proceeding and no changes are required. Once you mark this as complete the following task will generate: Planner, Suitability Checklist - Confirm fulfilment Completed</inlineHelpText>
    <label>Complete?</label>
    <type>Checkbox</type>
</CustomField>