force-app/main/default/objects/AdviceChecklist__c/fields/AdviceName__c.field-meta.xml
<CustomField>
    <fullName>AdviceName__c</fullName>
    <label>Advice Name</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>Advice Checklists</relationshipLabel>
    <relationshipName>AdviceChecklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>