force-app/main/default/objects/AdviceChecklist__c/fields/AdvisorDebriefComplete__c.field-meta.xml
<CustomField>
    <fullName>AdvisorDebriefComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the partner has completed the write up from the advice meeting.</description>
    <label>Advisor debrief complete</label>
    <type>Checkbox</type>
</CustomField>