force-app/main/default/objects/AdviceChecklist__c/fields/Allowances__c.field-meta.xml
<CustomField>
    <fullName>Allowances__c</fullName>
    <inlineHelpText>&quot;Allowances to consider: pension annual allowance, ISA/LISA allowance, JISA allowance, VCTs, CGT, PSA, dividends, NRB, RNRB, gifting exemptions, marriage allowance etc.
Outline the allowances that are relevant to the client.&quot;</inlineHelpText>
    <label>Allowances</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>