force-app/main/default/objects/AdviceChecklist__c/fields/AllProductBrochuresSavedInGdrive__c.field-meta.xml
<CustomField>
    <fullName>AllProductBrochuresSavedInGdrive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Relevant for protection and OI recommendations. Used to ensure all third party product literature is saved to the advice folder.</description>
    <inlineHelpText>Relevant for protection and OI recommendations. Ensure all third party product literature is saved to the advice folder &gt; &quot;New business - KFDs&quot;. A copy should be made and saved to the Portal Documents folder.</inlineHelpText>
    <label>All product brochures saved in G-Drive</label>
    <type>Checkbox</type>
</CustomField>