force-app/main/default/objects/AdviceChecklist__c/fields/AmlNotes__c.field-meta.xml
<CustomField>
    <fullName>AmlNotes__c</fullName>
    <description>List documents collected and/or any relevant notes</description>
    <inlineHelpText>List documents collected and/or any relevant notes</inlineHelpText>
    <label>AML notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>