force-app/main/default/objects/AdviceChecklist__c/fields/AnnualReviewDeckUrl__c.field-meta.xml
<CustomField>
    <fullName>AnnualReviewDeckUrl__c</fullName>
    <description>Store the final annual review deck to present to client.</description>
    <label>Annual Review Deck Url</label>
    <type>Url</type>
</CustomField>