force-app/main/default/objects/AdviceChecklist__c/fields/AnnualReviewMonth__c.field-meta.xml
<CustomField>
    <fullName>AnnualReviewMonth__c</fullName>
    <description>No longer required as replaced with household field</description>
    <label>Annual review month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>