force-app/main/default/objects/AdviceChecklist__c/fields/AnnualReviewRebalancing__c.field-meta.xml
<CustomField>
    <fullName>AnnualReviewRebalancing__c</fullName>
    <inlineHelpText>Existing wrappers and models. Move to sustainable. Outline CGT for GIAs.</inlineHelpText>
    <label>Annual review rebalancing</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>