force-app/main/default/objects/AdviceChecklist__c/fields/AreAnyChangesRequired__c.field-meta.xml
<CustomField>
    <fullName>AreAnyChangesRequired__c</fullName>
    <description>For use in partner review of deck</description>
    <label>Are any changes required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>