force-app/main/default/objects/AdviceChecklist__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <label>Assets</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>