force-app/main/default/objects/AdviceChecklist__c/fields/BusinessProtectionHouse__c.field-meta.xml
<CustomField>
    <fullName>BusinessProtectionHouse__c</fullName>
    <defaultValue>&quot;https://docs.google.com/document/d/1H5Xpz6bxh6IM1MR9ooUbYY7PXXn4MoHUptVNG7iojKA/edit&quot;</defaultValue>
    <description>Use unclear</description>
    <label>Business protection house</label>
    <type>Url</type>
</CustomField>