force-app/main/default/objects/AdviceChecklist__c/fields/CanAllAssetsBeTransferred__c.field-meta.xml
<CustomField>
    <fullName>CanAllAssetsBeTransferred__c</fullName>
    <description>For use in in-specie transfers</description>
    <inlineHelpText>Check the Hubwise buy list</inlineHelpText>
    <label>Can all assets be transferred?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>