force-app/main/default/objects/AdviceChecklist__c/fields/CapacityForLoss__c.field-meta.xml
<CustomField>
    <fullName>CapacityForLoss__c</fullName>
    <description>Description of the clients capacity for loss</description>
    <label>Capacity for loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Higher</fullName>
            </value>
            <value>
                <fullName>In line</fullName>
            </value>
            <value>
                <fullName>Lower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>