force-app/main/default/objects/AdviceChecklist__c/fields/CarryForward4EyeRequired__c.field-meta.xml
<CustomField>
    <fullName>CarryForward4EyeRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once you mark this as complete the following task will generate in Salesforce for planner queue: Four eye carry forward</inlineHelpText>
    <label>Carry forward ready for peer review</label>
    <type>Checkbox</type>
</CustomField>