force-app/main/default/objects/AdviceChecklist__c/fields/CarryForward_CarryForwardAnalysis__c.field-meta.xml
<CustomField>
    <fullName>CarryForward_CarryForwardAnalysis__c</fullName>
    <description>Indicates if we need to conduct carry forward &amp; LTA pension analysis?</description>
    <inlineHelpText>Do we need to conduct carry forward &amp; LTA pension analysis?</inlineHelpText>
    <label>Carry forward &amp; LTA pension analysis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>