force-app/main/default/objects/AdviceChecklist__c/fields/CarryForwardNotes__c.field-meta.xml
<CustomField>
    <fullName>CarryForwardNotes__c</fullName>
    <description>Justification of why no carry forward calculation is required.</description>
    <inlineHelpText>Justify why no carry forward calculation is required.</inlineHelpText>
    <label>Carry forward notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>