force-app/main/default/objects/AdviceChecklist__c/fields/CashAdvice__c.field-meta.xml
<CustomField>
    <fullName>CashAdvice__c</fullName>
    <description>Description of recommendations with clients cash</description>
    <inlineHelpText>Summarise any cash advice recommendations (lump sums/regulars/debt repayments) and/or justify why none are being made, e.g. cash reserves are insufficient.</inlineHelpText>
    <label>Cash advice</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>