force-app/main/default/objects/AdviceChecklist__c/fields/CashReserveLowerBound__c.field-meta.xml
<CustomField>
    <fullName>CashReserveLowerBound__c</fullName>
    <description>The minimum number of months we recommend the clients have a cash buffer to cover</description>
    <inlineHelpText>The minimum number of months we recommend the clients have a cash buffer to cover</inlineHelpText>
    <label>Cash reserve lower bound</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>