force-app/main/default/objects/AdviceChecklist__c/fields/Cf4EyeCompletedBy__c.field-meta.xml
<CustomField>
    <fullName>Cf4EyeCompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records who completed the four eye of the carry forward calculations</description>
    <label>CF 4 eye completed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advice_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>