force-app/main/default/objects/AdviceChecklist__c/fields/CgtInformationAnalysed__c.field-meta.xml
<CustomField>
    <fullName>CgtInformationAnalysed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CGT Information Analysed?</label>
    <type>Checkbox</type>
</CustomField>