force-app/main/default/objects/AdviceChecklist__c/fields/CgtInformationReceived__c.field-meta.xml
<CustomField>
    <fullName>CgtInformationReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records confirmation of receipt of capital gains tax information</description>
    <inlineHelpText>CGT Information received from client/ceding provider?</inlineHelpText>
    <label>CGT information received?</label>
    <type>Checkbox</type>
</CustomField>