force-app/main/default/objects/AdviceChecklist__c/fields/ChangesToLifelineSinceLastModel__c.field-meta.xml
<CustomField>
    <fullName>ChangesToLifelineSinceLastModel__c</fullName>
    <description>Notes on changes</description>
    <label>Changes to lifeline since last model</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>