force-app/main/default/objects/AdviceChecklist__c/fields/ChangesToTimelineSinceLastModel__c.field-meta.xml
<CustomField>
    <fullName>ChangesToTimelineSinceLastModel__c</fullName>
    <description>Notes on changes</description>
    <label>Changes to timeline since last model</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>