force-app/main/default/objects/AdviceChecklist__c/fields/CheckedAgainstNarrative__c.field-meta.xml
<CustomField>
    <fullName>CheckedAgainstNarrative__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check that all recommendations and points highlighted in the narrative have been included.</inlineHelpText>
    <label>Checked against narrative</label>
    <type>Checkbox</type>
</CustomField>