force-app/main/default/objects/AdviceChecklist__c/fields/CheckedRecsAgainstFinalNarrative__c.field-meta.xml
<CustomField>
    <fullName>CheckedRecsAgainstFinalNarrative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <inlineHelpText>Final check that all recommendations and points highlighted in the narrative have been included.</inlineHelpText>
    <label>Checked recs against final narrative</label>
    <type>Checkbox</type>
</CustomField>