force-app/main/default/objects/AdviceChecklist__c/fields/CheckedScopeOfAdviceHw__c.field-meta.xml
<CustomField>
    <fullName>CheckedScopeOfAdviceHw__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records completion of fee check</description>
    <inlineHelpText>Existing clients: check scope of advice and platform to ensure correct fee structure is being applied.
New clients: check opportunity and scope of advice. If any discrepancies, raise with partner.</inlineHelpText>
    <label>Checked scope of advice &amp; HW</label>
    <type>Checkbox</type>
</CustomField>