force-app/main/default/objects/AdviceChecklist__c/fields/Client1__c.field-meta.xml
<CustomField>
    <fullName>Client1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advice Checklists (Client 1)</relationshipLabel>
    <relationshipName>Advice_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>