force-app/main/default/objects/AdviceChecklist__c/fields/Client1CfCalc__c.field-meta.xml
<CustomField>
    <fullName>Client1CfCalc__c</fullName>
    <description>URL to carry forward calculation for primary client</description>
    <inlineHelpText>Insert URL to calculation in client drive.</inlineHelpText>
    <label>Client 1 CF calculation</label>
    <type>Url</type>
</CustomField>