force-app/main/default/objects/AdviceChecklist__c/fields/Client1CfPensionAllowanceInfo__c.field-meta.xml
<CustomField>
    <fullName>Client1CfPensionAllowanceInfo__c</fullName>
    <inlineHelpText>Carry forward pension allowance information using template linked in resources. Insert figures, assumptions, limitations and the effective date the calculation needs to be 4eyed from here.</inlineHelpText>
    <label>Client 1: CF Pension Allowance Info</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>