force-app/main/default/objects/AdviceChecklist__c/fields/Client1ExperianCheckForAml__c.field-meta.xml
<CustomField>
    <fullName>Client1ExperianCheckForAml__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records completion of AML check</description>
    <label>Client 1 - Experian check for AML</label>
    <type>Checkbox</type>
</CustomField>