force-app/main/default/objects/AdviceChecklist__c/fields/Client1LtaCalculations__c.field-meta.xml
<CustomField>
    <fullName>Client1LtaCalculations__c</fullName>
    <description>Figures, assumptions and limitations here for primary clients LTA calculations</description>
    <inlineHelpText>Insert figures, assumptions and limitations here. Consult head planner if need help calculating.</inlineHelpText>
    <label>Client 1: LTA calculations</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>