force-app/main/default/objects/AdviceChecklist__c/fields/Client1Mpaa__c.field-meta.xml
<CustomField>
    <fullName>Client1Mpaa__c</fullName>
    <description>Indicates the current MPAA status of client 1</description>
    <inlineHelpText>If this field is incorrect, update the field both here AND on their person account</inlineHelpText>
    <label>Client 1 MPAA</label>
    <type>TextArea</type>
</CustomField>