force-app/main/default/objects/AdviceChecklist__c/fields/Client1NotesOnVulnerability__c.field-meta.xml
<CustomField>
    <fullName>Client1NotesOnVulnerability__c</fullName>
    <inlineHelpText>E.g. Is the client in poor health or elderly? Have they suffered a recent bereavement or gone through divorce? If reasoning for vulnerability is unclear/requires further discussion, raise with partner and update notes accordingly.</inlineHelpText>
    <label>Client 1 notes on vulnerability</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>