force-app/main/default/objects/AdviceChecklist__c/fields/Client1PreferredName__c.field-meta.xml
<CustomField>
    <fullName>Client1PreferredName__c</fullName>
    <description>The preferred name of the primary client</description>
    <label>Client 1 preferred name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>