force-app/main/default/objects/AdviceChecklist__c/fields/Client1RetirementAge__c.field-meta.xml
<CustomField>
    <fullName>Client1RetirementAge__c</fullName>
    <description>Includes current age and years to retirement or confirm already retired and age, e.g. 65 - 10 years, 5 months</description>
    <inlineHelpText>Include current age and years to retirement or confirm already retired and age, e.g. 65 (currently 45 ~ 20 years)</inlineHelpText>
    <label>Client 1 retirement age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>