force-app/main/default/objects/AdviceChecklist__c/fields/Client1RiskScore__c.field-meta.xml
<CustomField>
    <fullName>Client1RiskScore__c</fullName>
    <description>Risk tolerance category from most recent RTQ for the primary client</description>
    <inlineHelpText>Risk tolerance category from most recent RTQ.</inlineHelpText>
    <label>Client 1 risk score</label>
    <type>TextArea</type>
</CustomField>