force-app/main/default/objects/AdviceChecklist__c/fields/Client1UsConnections__c.field-meta.xml
<CustomField>
    <fullName>Client1UsConnections__c</fullName>
    <label>Does Client 1 Have Any US Connections?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>