force-app/main/default/objects/AdviceChecklist__c/fields/Client1VulnerabilityLastAssessed__c.field-meta.xml
<CustomField>
    <fullName>Client1VulnerabilityLastAssessed__c</fullName>
    <description>The date the primary client last had their vulnerability level assessed</description>
    <label>Client 1 vulnerability last assessed</label>
    <type>Date</type>
</CustomField>