force-app/main/default/objects/AdviceChecklist__c/fields/Client1WorldCheckOnePepScreening__c.field-meta.xml
<CustomField>
    <fullName>Client1WorldCheckOnePepScreening__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>Client 1 - WC1 for PEP screening</label>
    <type>Checkbox</type>
</CustomField>