force-app/main/default/objects/AdviceChecklist__c/fields/Client2CfCalc__c.field-meta.xml
<CustomField>
    <fullName>Client2CfCalc__c</fullName>
    <description>URL to carry forward calculations for second client</description>
    <inlineHelpText>Insert URL to calculation in client drive.</inlineHelpText>
    <label>Client 2 CF calculations</label>
    <type>Url</type>
</CustomField>