force-app/main/default/objects/AdviceChecklist__c/fields/Client2CfPensionAllowanceInfo__c.field-meta.xml
<CustomField>
    <fullName>Client2CfPensionAllowanceInfo__c</fullName>
    <description>Information about carry forward allowance for the secondary client</description>
    <inlineHelpText>Carry forward pension allowance information using template linked in resources. Insert figures, assumptions, limitations and the effective date the calculation needs to be 4eyed from here.</inlineHelpText>
    <label>Client 2: CF pension allowance info</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>