force-app/main/default/objects/AdviceChecklist__c/fields/Client2ExperianCheckForAml__c.field-meta.xml
<CustomField>
    <fullName>Client2ExperianCheckForAml__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Records confirmation of AML check for second client</description>
    <label>Client 2 - Experian check for AML</label>
    <type>Checkbox</type>
</CustomField>