force-app/main/default/objects/AdviceChecklist__c/fields/Client2LtaCalculations__c.field-meta.xml
<CustomField>
    <fullName>Client2LtaCalculations__c</fullName>
    <inlineHelpText>Insert figures, assumptions and limitations here. Consult head planner if need help calculating.</inlineHelpText>
    <label>Client 2: LTA Calculations</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>