force-app/main/default/objects/AdviceChecklist__c/fields/Client2LtaOtherCalc__c.field-meta.xml
<CustomField>
    <fullName>Client2LtaOtherCalc__c</fullName>
    <inlineHelpText>Insert URL to calculation in client drive.</inlineHelpText>
    <label>Client 2 LTA/other calc</label>
    <type>Url</type>
</CustomField>