force-app/main/default/objects/AdviceChecklist__c/fields/Client2Mpaa__c.field-meta.xml
<CustomField>
    <fullName>Client2Mpaa__c</fullName>
    <description>Indicates the MPAA status for the second client</description>
    <inlineHelpText>If this field is incorrect, update the field both here AND on their person account</inlineHelpText>
    <label>Client 2 MPAA</label>
    <type>TextArea</type>
</CustomField>