force-app/main/default/objects/AdviceChecklist__c/fields/Client2PreferredName__c.field-meta.xml
<CustomField>
    <fullName>Client2PreferredName__c</fullName>
    <description>Preferred name for the secondary client</description>
    <label>Client 2 preferred name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>