force-app/main/default/objects/AdviceChecklist__c/fields/Client2RiskScore__c.field-meta.xml
<CustomField>
    <fullName>Client2RiskScore__c</fullName>
    <description>Risk tolerance category from most recent RTQ for the secondary client</description>
    <inlineHelpText>Risk tolerance category from most recent RTQ.</inlineHelpText>
    <label>Client 2 risk score</label>
    <type>TextArea</type>
</CustomField>