force-app/main/default/objects/AdviceChecklist__c/fields/Client2UsConnections__c.field-meta.xml
<CustomField>
    <fullName>Client2UsConnections__c</fullName>
    <description>Used in AML section</description>
    <label>Does client 2 have any US connections?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>