force-app/main/default/objects/AdviceChecklist__c/fields/Client2VulnerabilityLastAssessed__c.field-meta.xml
<CustomField>
    <fullName>Client2VulnerabilityLastAssessed__c</fullName>
    <description>Date of last vulnerability assessment for secondary client</description>
    <label>Client 2 vulnerability last assessed</label>
    <type>Date</type>
</CustomField>