force-app/main/default/objects/AdviceChecklist__c/fields/Client2VulnerableClientStatus__c.field-meta.xml
<CustomField>
    <fullName>Client2VulnerableClientStatus__c</fullName>
    <description>Vulnerability status for secondary client</description>
    <label>Client 2 vulnerable client status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vulnerable</fullName>
            </value>
            <value>
                <fullName>Not vulnerable</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>