force-app/main/default/objects/AdviceChecklist__c/fields/ClientConfirmedToProceedWithAdvice__c.field-meta.xml
<CustomField>
    <fullName>ClientConfirmedToProceedWithAdvice__c</fullName>
    <description>Indicates clients level of acceptance</description>
    <label>Client confirmed to proceed with advice?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>