force-app/main/default/objects/AdviceChecklist__c/fields/ClientQuotesInTheirOwnWords__c.field-meta.xml
<CustomField>
    <fullName>ClientQuotesInTheirOwnWords__c</fullName>
    <inlineHelpText>Please add any client quotes (in their own words) which help for suitability and their feelings around protection</inlineHelpText>
    <label>Client Quotes (In Their Own Words)…</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>