force-app/main/default/objects/AdviceChecklist__c/fields/ClientsExpressionOfWishes__c.field-meta.xml
<CustomField>
    <fullName>ClientsExpressionOfWishes__c</fullName>
    <description>Outline of the client’s Expression of Wishes should be pre-filled (NOVA SIPP and any retained plans)</description>
    <inlineHelpText>Outline how the client’s Expression of Wishes should be pre-filled (NOVA SIPP and any retained plans)</inlineHelpText>
    <label>Client’s expression of wishes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>