force-app/main/default/objects/AdviceChecklist__c/fields/CommentsAddedToDeck__c.field-meta.xml
<CustomField>
    <fullName>CommentsAddedToDeck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmation of completion of deck review</description>
    <inlineHelpText>Please add all comments to the deck</inlineHelpText>
    <label>Comments added to deck</label>
    <type>Checkbox</type>
</CustomField>