force-app/main/default/objects/AdviceChecklist__c/fields/CommentsIfChangesNeeded__c.field-meta.xml
<CustomField>
    <fullName>CommentsIfChangesNeeded__c</fullName>
    <description>Use unclear</description>
    <label>Comments if changes needed</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>