force-app/main/default/objects/AdviceChecklist__c/fields/ConcurrentAnnualReviewToBeCombined__c.field-meta.xml
<CustomField>
    <fullName>ConcurrentAnnualReviewToBeCombined__c</fullName>
    <description>Notes on whether there is a concurrent annual review that will be combined with this advice</description>
    <inlineHelpText>Is there a concurrent annual review that will be combined?
i.e. is one due in the next couple of months</inlineHelpText>
    <label>Concurrent annual review to be combined?</label>
    <type>TextArea</type>
</CustomField>