force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmAllKfdsAreLinkedInAppendix__c.field-meta.xml
<CustomField>
    <fullName>ConfirmAllKfdsAreLinkedInAppendix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm All KFD&#39;s Are Linked In Appendix</label>
    <type>Checkbox</type>
</CustomField>