force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmClientObjectives__c.field-meta.xml
<CustomField>
    <fullName>ConfirmClientObjectives__c</fullName>
    <description>Use to summarise client objectives including client&apos;s own words where applicable</description>
    <inlineHelpText>Use to summarise client objectives including client&apos;s own words where applicable</inlineHelpText>
    <label>Confirm client objectives</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>