force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmCorrectAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmCorrectAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>Confirm correct amount</label>
    <type>Checkbox</type>
</CustomField>