force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmCorrectCharges__c.field-meta.xml
<CustomField>
    <fullName>ConfirmCorrectCharges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>Confirm correct charges</label>
    <type>Checkbox</type>
</CustomField>