force-app/main/default/objects/AdviceChecklist__c/fields/ConfirmCorrectPortfolioSelected__c.field-meta.xml
<CustomField>
    <fullName>ConfirmCorrectPortfolioSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unused</description>
    <label>Confirm correct portfolio selected</label>
    <type>Checkbox</type>
</CustomField>